refactor: extract reuseable component and rename few styles

--- a/src/components/pathway-progress/styles/index.scss
+++ b/src/components/pathway-progress/styles/index.scss
@@ -2,3 +2,5 @@
 
 @import "./SubscriptionStatusCard.scss";
 @import "./PathwayRequirements";
+@import "../../program-progress/styles/ProgramListingCard";
+
