[DP-305] Add pagination for the catalog (#33)
* [DP-305] Add pagination for the catalog

* [DP-305] Update the components using updated paragon Card

* [DP-305] Fix based on review comments

Co-authored-by: Milan Darjanin <milan.darjanin@woven-planet.global>

--- a/src/index.scss
+++ b/src/index.scss
@@ -22,6 +22,7 @@ $fa-font-path: "~font-awesome/fonts";
 @import "./components/dashboard/sidebar/styles/SidebarCard";
 @import "./components/dashboard/styles/SubscriptionExpirationModal";
 @import "./components/dashboard/styles/Dashboard";
+@import "./components/dashboard/styles/Pagination";
 @import "./components/search/styles/";
 @import "./components/skills-quiz/styles/";
 @import "./components/site-header/styles/Header";
