--- a/src/components/dashboard/styles/_Dashboard.scss
+++ b/src/components/dashboard/styles/_Dashboard.scss
@@ -51,4 +51,12 @@
     color: $dark-200;
     @extend .small;
   }
+
+  &-catalog-wrap {
+    margin: 0 -32px;
+  }
+
+  &-catalog-page {
+    padding: 32px 32px 0;
+  }
 }
