feat: Added a new CTA on dashboard for users if search dashboard has no courses.

--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,7 @@ $fa-font-path: "~font-awesome/fonts";
 @import "./components/dashboard/main-content/course-enrollments/styles/CourseSection";
 @import "./components/dashboard/sidebar/styles/SidebarCard";
 @import "./components/dashboard/styles/SubscriptionExpirationModal";
+@import "./components/dashboard/styles/CourseRecommendations";
 @import "./components/search/styles/";
 @import "./components/skills-quiz/styles/";
 @import "./components/site-header/styles/Header";
