fix: Fixes for visual inconsistencies.

--- a/src/components/pathway-progress/styles/index.scss
+++ b/src/components/pathway-progress/styles/index.scss
@@ -2,5 +2,6 @@
 
 @import "./SubscriptionStatusCard.scss";
 @import "./PathwayRequirements";
+@import "./PathwayProgressHeader";
 @import "../../program-progress/styles/ProgramListingCard";
 
