fix: rely solely on stock Paragon Card styles

--- a/src/components/pathway-progress/styles/index.scss
+++ b/src/components/pathway-progress/styles/index.scss
@@ -1,7 +1,4 @@
-@import "@edx/paragon/scss/core/core";
-
-@import "./SubscriptionStatusCard.scss";
+@import "./SubscriptionStatusCard";
 @import "./PathwayRequirements";
 @import "./PathwayProgressHeader";
 @import "../../program-progress/styles/ProgramListingCard";
-
