fix: rely solely on stock Paragon Card styles (#655)

--- a/src/components/pathway/styles/_PathwayModal.scss
+++ b/src/components/pathway/styles/_PathwayModal.scss
@@ -1,5 +1,5 @@
-
 .learner-pathway-modal {
+  // [tech debt] avoid overriding Paragon styles; don't use !important
   .pgn__modal-close-button{
     background-color: white !important;
     color: $primary-500 !important;
