feat: Add course review section in course about page

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@ $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
 
 @import "./components/course/styles/CourseHeader";
+@import "./components/course/styles/CourseReview";
 @import "./components/course/styles/CourseSidebar";
 @import "./components/course/styles/ProgramSidebar";
 @import "./components/course/styles/CourseSkills";
