feat: Updated the design of the executive eduction course landing page.

--- a/src/index.scss
+++ b/src/index.scss
@@ -28,3 +28,4 @@ $fa-font-path: "~font-awesome/fonts";
 @import "./components/enterprise-user-subsidy/enterprise-offers/styles";
 @import "./components/my-career/styles/MyCareer";
 @import "./components/my-career/styles/MyCareerChart";
+@import "./components/executive-education-2u/styles/ExecutiveEducation2UPage";
