feat: error screen for executive education enrollment screen

--- a/src/components/executive-education-2u/styles/_ExecutiveEducation2UPage.scss
+++ b/src/components/executive-education-2u/styles/_ExecutiveEducation2UPage.scss
@@ -9,6 +9,12 @@
   }
 }
 
+.exec-ed-registration-page {
+  display: flex;
+  flex: 1;
+  background-color: $light-200;
+}
+
 .vertical {
   border-right: 1px solid $gray-200;
 }
