--- a/src/index.scss
+++ b/src/index.scss
@@ -29,3 +29,4 @@ $fa-font-path: "~font-awesome/fonts";
 @import "./components/my-career/styles/MyCareer";
 @import "./components/my-career/styles/MyCareerChart";
 @import "./components/executive-education-2u/styles/ExecutiveEducation2UPage";
+@import "./components/executive-education-2u/styles/ExecutiveEducation2UErrorPage";
