feat: Added the executive education enrollment complete page

--- a/src/components/executive-education-2u/styles/_ExecutiveEducation2UPage.scss
+++ b/src/components/executive-education-2u/styles/_ExecutiveEducation2UPage.scss
@@ -33,3 +33,10 @@
 .vertical {
   border-right: 1px solid $gray-200;
 }
+
+.text-black-color {
+  color: black;
+}
+.text-underline {
+  text-decoration: underline;
+}
