--- a/src/components/executive-education-2u/styles/_ExecutiveEducation2UPage.scss
+++ b/src/components/executive-education-2u/styles/_ExecutiveEducation2UPage.scss
@@ -5,12 +5,12 @@
 
   .course-summary {
     .course-details {
-      line-height: 2em;
+      line-height: 2rem;
     }
   }
   .registration-summary {
     .registration-details {
-      line-height: 2em;
+      line-height: 2rem;
     }
   }
   .vertical {
