fix: ensure vertical class name doesn't interfere with rest of app (#716)

--- a/src/components/executive-education-2u/styles/_ExecutiveEducation2UPage.scss
+++ b/src/components/executive-education-2u/styles/_ExecutiveEducation2UPage.scss
@@ -1,28 +1,27 @@
-.course-summary {
-  .course-details {
-    line-height: 2em;
-  }
-}
-.registration-summary {
-  .registration-details {
-    line-height: 2em;
-  }
-}
-
 .exec-ed-registration-page {
   display: flex;
   flex: 1;
   background-color: $light-200;
-}
 
-.vertical {
-  border-right: 1px solid $gray-200;
-}
-
-.text-black-color {
-  color: black;
-}
-
-.text-underline {
-  text-decoration: underline;
+  .course-summary {
+    .course-details {
+      line-height: 2rem;
+    }
+  }
+  .registration-summary {
+    .registration-details {
+      line-height: 2rem;
+    }
+  }
+  .vertical {
+    border-right: 1px solid $gray-200;
+  }
+  
+  .text-black-color {
+    color: black;
+  }
+  
+  .text-underline {
+    text-decoration: underline;
+  }  
 }
