feat: migrate external course enrollment routes under course page
Moves the external course enrollment routes (registration form and confirmation) as nested routes under
CoursePage. These changes makes these routes be aware of all the course metadata CoursePage already has
access to, including applicable user subsidy to the course without needing to re-implement the same calls.

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
 
+@import "./components/layout/styles/Layout";
 @import "./components/course/styles/CourseHeader";
 @import "./components/course/styles/CourseReview";
 @import "./components/course/styles/CourseSidebar";
