--- a/src/components/layout/styles/Layout.scss
+++ b/src/components/layout/styles/Layout.scss
@@ -4,10 +4,14 @@
     min-height: 100vh;
 }
 
-#content {
+.page-light-bg {
+    background: $light-200;
+}
+
+.fill-vertical-space {
     display: flex;
-    flex-direction: column;
     flex: 1;
+    flex-direction: column;
 }
 
 footer a img {
