fix: Updated text color for the CTA link to white.

--- a/src/components/dashboard/main-content/course-enrollments/course-cards/styles/_CourseCard.scss
+++ b/src/components/dashboard/main-content/course-enrollments/course-cards/styles/_CourseCard.scss
@@ -10,6 +10,17 @@
     @extend .mb-0;
   }
 
+  &.exec-ed-course-card {
+    p > a[href]:not(.btn) {
+      color: $light-200;
+      text-decoration-color: $light-200;
+
+      &:hover {
+         color: $light-500;
+      }
+    }
+  }
+
   .notifications {
     li:last-child {
       .notification {
