chore: replace font-awesome with paragon icons

--- a/src/components/program/styles/_endorsements.scss
+++ b/src/components/program/styles/_endorsements.scss
@@ -19,6 +19,8 @@
 
     .quote-icon {
       position: absolute;
+      transform: rotateY(180deg) rotateX(180deg);
+      margin-top: -12px;
     }
   }
 
