--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,7 @@
 @import "./components/dashboard/styles/SubscriptionExpirationModal";
 @import "./components/dashboard/styles/CourseRecommendations";
 @import "./components/skills-quiz/styles";
+@import "./components/skills-quiz-v2/styles";
 @import "./components/site-header/styles/Header";
 @import "./components/preview-expand/styles/PreviewExpand";
 @import "./components/pathway/styles";
