feat: added skills quiz v2

--- a/src/index.scss
+++ b/src/index.scss
@@ -21,6 +21,7 @@ $fa-font-path: "~font-awesome/fonts";
 @import "./components/dashboard/styles/SubscriptionExpirationModal";
 @import "./components/dashboard/styles/CourseRecommendations";
 @import "./components/skills-quiz/styles";
+@import "./components/skills-quiz-v2/styles";
 @import "./components/site-header/styles/Header";
 @import "./components/preview-expand/styles/PreviewExpand";
 @import "./components/pathway/styles";
