feat: cancelled/expired assignment state

--- a/src/components/dashboard/main-content/course-enrollments/course-cards/styles/_CourseCard.scss
+++ b/src/components/dashboard/main-content/course-enrollments/course-cards/styles/_CourseCard.scss
@@ -45,4 +45,13 @@
       display: block;
     }
   }
+
+  .assignment-alert-row {
+    margin-bottom: -20px;
+  }
+
+  .assignment-alert {
+    border-radius: 0 0 10px 10px;
+    width: 100%;
+  }
 }
