--- a/src/components/skills-quiz-v2/styles/_Body.scss
+++ b/src/components/skills-quiz-v2/styles/_Body.scss
@@ -1,37 +1,42 @@
-$gray-500: #707070;
-$max-sm-modal-width: 28rem !important;
-$min-sm-modal-height: 16rem !important;
+.skills-quiz-v2 {
+  $max-sm-modal-width: 28rem !important;
+  $min-sm-modal-height: 16rem !important;
 
-.page-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.form {
-  width: 65%;
-}
-.pgn__form-group {
-  width: 101%;
-}
-.text {
-  width: 65%;
-}
-.pgn__form-label {
-  font-weight: bold;
-}
-
-.btn {
-  margin: 7px -5px;
-}
-
-.form-auto-suggest {
-  .form-control {
-    color: $gray-500;
+  .page-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
-}
 
-.modal-small {
-  max-width: $max-sm-modal-width;
-  min-height: $min-sm-modal-height;
+  .form {
+    width: 65%;
+  }
+
+  .pgn__form-group {
+    width: 101%;
+  }
+
+  .text {
+    width: 65%;
+  }
+
+  .pgn__form-label {
+    font-weight: bold;
+  }
+
+  .advanced-options-btn {
+    text-decoration: none;
+  }
+
+  .form-auto-suggest {
+    .form-control {
+      color: $gray-500;
+    }
+  }
+
+  .modal-small {
+    max-width: $max-sm-modal-width;
+    min-height: $min-sm-modal-height;
+  }
 }
