--- a/src/components/skills-quiz-v2/styles/_Card.scss
+++ b/src/components/skills-quiz-v2/styles/_Card.scss
@@ -1,43 +1,44 @@
-$dark-500: #00262b !default;
+.skills-quiz-v2-job-card {
+  .selectable-box {
+    .box {
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: space-between;
+      min-height: 400px;
+    }
 
-.selectable-box {
-  .box {
+    .pgn__form-radio-input {
+      min-width: 21px;
+      min-height: 21px;
+    }
+
+    .lead {
+      display: flex;
+      max-width: 250px;
+      min-height: 5rem;
+    }
+  }
+
+  .cards-display {
+    margin: 33px 0;
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    min-height: 400px;
+    flex-direction: column;
+    width: 65%;
+    height: 400px;
   }
-  .pgn__form-radio-input {
-    min-width: 21px;
-    min-height: 21px;
-  }
-  .lead {
+
+  .card-container {
+    border: none;
     display: flex;
-    max-width: 250px;
-    min-height: 5rem;
+    flex-direction: row;
+    height: 100%;
   }
-}
 
-.cards-display {
-  margin: 33px 0;
-  display: flex;
-  flex-direction: column;
-  width: 65%;
-  height: 400px;
-}
+  .card {
+    min-height: 10em;
+  }
 
-.card-container {
-  border: none;
-  display: flex;
-  flex-direction: row;
-  height: 100%;
-}
-
-.card {
-  margin-right: 10px;
-  min-height: 10em;
-}
-
-.pgn__searchfield {
-  height: 45px;
+  .pgn__searchfield {
+    height: 45px;
+  }
 }
