--- a/src/index.scss
+++ b/src/index.scss
@@ -28,3 +28,4 @@
 @import "./components/my-career/styles/MyCareer";
 @import "./components/executive-education-2u/styles/ExecutiveEducation2UPage";
 @import "./components/executive-education-2u/styles/ExecutiveEducation2UErrorPage";
+@import "./components/skills-quiz-v2/styles";
