feat: Academy tags chips connected to Algolia search

--- a/src/components/academies/styles/Academy.scss
+++ b/src/components/academies/styles/Academy.scss
@@ -7,3 +7,10 @@
     right: 1em;
  }
 }
+.academy-tag {
+  padding: 6px;
+  margin-right: 7px;
+  margin-top: 8px;
+  font-size: .875rem;
+  font-weight: normal;
+}
