--- a/src/index.scss
+++ b/src/index.scss
@@ -29,3 +29,4 @@
 @import "./components/executive-education-2u/styles/ExecutiveEducation2UPage";
 @import "./components/executive-education-2u/styles/ExecutiveEducation2UErrorPage";
 @import "./components/skills-quiz-v2/styles";
+@import "./components/academies/styles/Academy"
