feat: hide academie content section if empty

--- a/src/components/academies/styles/Academy.scss
+++ b/src/components/academies/styles/Academy.scss
@@ -14,3 +14,7 @@
   font-size: .875rem;
   font-weight: normal;
 }
+.tag-clear-button {
+  padding: 0px;
+  text-decoration: underline !important;
+}
