--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,12 +1,12 @@
+/* purgecss start ignore */
 @import "@edx/paragon/scss/core/core";
 @import "@edx/brand/paragon/variables";
 
-// the :export directive is the magic sauce for webpack such that the following variables
-// are accessible via importing in JS, e.g. ``import colors from './colors.scss';``
-:export {
-  dark: $gray-700;
-  white: $white;
-  primary: $primary;
-  info100: $info-100;
-  info500: $info-500;
+:root {
+  --pgn-color-dark: #{$gray-700};
+  --pgn-color-white:  #{$white};
+  --pgn-color-primary: #{$primary};
+  --pgn-info-100:  #{$info-100};
+  --pgn-info-500:  #{$info-500};
 }
+/* purgecss end ignore */
