--- a/src/index.scss
+++ b/src/index.scss
@@ -29,4 +29,12 @@
 @import "./components/executive-education-2u/styles/ExecutiveEducation2UPage";
 @import "./components/executive-education-2u/styles/ExecutiveEducation2UErrorPage";
 @import "./components/skills-quiz-v2/styles";
-@import "./components/academies/styles/Academy"
+@import "./components/academies/styles/Academy";
+
+:root {
+  --pgn-color-dark: #{$gray-700};
+  --pgn-color-white:  #{$white};
+  --pgn-color-primary: #{$primary};
+  --pgn-color-info-100:  #{$info-100};
+  --pgn-color-info-500:  #{$info-500};
+}
