--- a/src/components/program-progress/styles/_ProgramProgressSidebar.scss
+++ b/src/components/program-progress/styles/_ProgramProgressSidebar.scss
@@ -38,7 +38,7 @@ $gray-light3: mix($white, $gray, 80%) !default;
     }
 
     .motivating-message {
-      color: #414141;
+      color: $gray-700;
     }
   }
 
