--- a/src/components/program/styles/_programDetail.scss
+++ b/src/components/program/styles/_programDetail.scss
@@ -19,7 +19,7 @@
       font-size: .75rem;
     }
     .link-muted {
-      color: #00262b;
+      color: $primary;
       font-size: .875rem;
       font-weight: 400;
       line-height: 1.5rem;
