--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,7 @@
 
 // Component styles
 @import "../components/layout/styles/Layout";
+@import "../components/enterprise-banner/styles/EnterpriseBanner";
 @import "../components/course/styles/CourseHeader";
 @import "../components/course/styles/CourseReview";
 @import "../components/course/styles/CourseSidebar";
