--- a/src/styles/nprogress.scss
+++ b/src/styles/nprogress.scss
@@ -1,4 +1,4 @@
-@import "nprogress/nprogress";
+@import "accessible-nprogress/dist/accessible-nprogress";
 
 #nprogress .bar {
   background: $brand-500;
