--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,11 @@
-@import "@edx/brand/paragon/fonts";
-@import "@edx/brand/paragon/variables";
-@import "@openedx/paragon/scss/core/core";
+@import "~@edx/brand/paragon/fonts";
+@import "~@edx/brand/paragon/variables";
+@import "~@openedx/paragon/scss/core/core";
 // frontend-enterprise-* imports must come before the paragon overrides for correct styling
 @import "~@edx/frontend-enterprise-catalog-search";
-@import "@edx/brand/paragon/overrides";
+@import "~@edx/brand/paragon/overrides";
 
+@import "~@edx/frontend-component-footer/dist/footer";
 
 @import "./components/layout/styles/Layout";
 @import "./components/course/styles/CourseHeader";
