chore: pr review

--- a/src/components/program/styles/_ProgramDataBar.scss
+++ b/src/components/program/styles/_ProgramDataBar.scss
@@ -227,7 +227,7 @@
 
   .alerts-wrapper {
     background-color: red;
-    color: $white;
+    color: $black;
     text-align: center;
     margin-bottom: 0;
     font: {
