fix: pathway title opacity issue on prod

--- a/src/components/academies/styles/Academy.scss
+++ b/src/components/academies/styles/Academy.scss
@@ -48,7 +48,7 @@
     color: white;
     margin-bottom: 2rem;
 
-    opacity: 0px;
+    opacity: 1;
     font-family: Inter;
     font-size: 60px;
     font-weight: 900;
