--- a/src/components/microlearning/styles/VideoDetailPage.scss
+++ b/src/components/microlearning/styles/VideoDetailPage.scss
@@ -81,4 +81,28 @@
   .vjs-transcribe-cueline {
     color: #00688d;
   }
+  .logo-cutom-style {
+    max-width: 59px;
+    max-height: 30px;
+    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.15), 0px 0px 4px 0px rgba(0, 0, 0, 0.15);
+  }
+}
+.preview-enroll-expand-body {
+  max-height: 120px;
+  -webkit-transition: max-height .5s ease;
+  transition: max-height .5s ease;
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 24px;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(hsla(0,0%,100%,0)),to(white));
+    background-image: linear-gradient(180deg,hsla(0,0%,100%,0),white);
+  }
+  ul {
+    padding-left: 1.5rem;
+  }
 }
